; ModuleID = '/home/carl/AnghaBench/freebsd/sys/vm/extr_vm_page.c_vm_wait_min.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/vm/extr_vm_page.c_vm_wait_min.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@vm_domainset_lock = common dso_local global i32 0, align 4
@vm_min_waiters = common dso_local global i32 0, align 4
@vm_min_domains = common dso_local global i32 0, align 4
@PVM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"vmwait\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vm_wait_min() #0 {
  %1 = call i32 @mtx_lock(i32* @vm_domainset_lock)
  br label %2

2:                                                ; preds = %5, %0
  %3 = call i64 (...) @vm_page_count_min()
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %10

5:                                                ; preds = %2
  %6 = load i32, i32* @vm_min_waiters, align 4
  %7 = add nsw i32 %6, 1
  store i32 %7, i32* @vm_min_waiters, align 4
  %8 = load i32, i32* @PVM, align 4
  %9 = call i32 @msleep(i32* @vm_min_domains, i32* @vm_domainset_lock, i32 %8, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 0)
  br label %2

10:                                               ; preds = %2
  %11 = call i32 @mtx_unlock(i32* @vm_domainset_lock)
  ret void
}

declare dso_local i32 @mtx_lock(i32*) #1

declare dso_local i64 @vm_page_count_min(...) #1

declare dso_local i32 @msleep(i32*, i32*, i32, i8*, i32) #1

declare dso_local i32 @mtx_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
